# speak-to-computer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  settings.ini.example
scripts/: clean-build.sh  install-autostart.sh  install-openwakeword-runtime.sh  openwakeword_sidecar.py
scripts/openwakeword/: requirements.txt  smoke_test.py
src/: AppSettings.cpp  AppSettings.h  AudioRecorder.cpp  AudioRecorder.h  ClipboardPaster.cpp  ClipboardPaster.h  OverlayWidget.cpp  OverlayWidget.h  SpeakToComputerApp.cpp  SpeakToComputerApp.h  TranscriptCleaner.cpp  TranscriptCleaner.h  VadEndpointDetector.cpp  VadEndpointDetector.h  WakeWordListener.cpp  WakeWordListener.h  WavWriter.cpp  WavWriter.h  WebRtcVad.cpp  WebRtcVad.h  WhisperRunner.cpp  WhisperRunner.h  X11Hotkey.cpp  X11Hotkey.h  main.cpp
tests/: CoreBehaviorTest.cpp
